force-app/main/default/objects/Appointment_Name__c/Appointment_Name__c.object-meta.xml
<CustomObject>
    <label>Appointment Name</label>
    <nameField>
        <label>Appointment Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AppointmentNames</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>