force-app/main/default/objects/Appointment_Name__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AppointmentNames</relationshipLabel>
    <relationshipName>AppointmentNames</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>