force-app/main/default/objects/Appointment_Name__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>AppointmentNames</relationshipLabel>
    <relationshipName>AppointmentNames</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>