force-app/main/default/objects/Appointment_Name__c/fields/Communication_method__c.field-meta.xml
<CustomField>
    <fullName>Communication_method__c</fullName>
    <label>Communication method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>What&apos;s App</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>