force-app/main/default/objects/Appointment_Name__c/fields/Schedule_setup__c.field-meta.xml
<CustomField>
    <fullName>Schedule_setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule setup</label>
    <referenceTo>Schedule_setup__c</referenceTo>
    <relationshipLabel>AppointmentNames</relationshipLabel>
    <relationshipName>AppointmentNames</relationshipName>
    <type>Lookup</type>
</CustomField>